Wroking on projects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="hero.css" />
     <link rel="stylesheet" href="skills.css" />
+    <link rel="stylesheet" href="projects.css" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -141,6 +142,56 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="projects" id="projects">
+      <div class="container projects-container">
+        <div class="project">
+          <div>
+            <h3>Spanish Shine</h3>
+            <p>React.js, Tailwind.css</p>
+          </div>
+          <div class="project-image-container">
+            <img src="./assets/spanish-shine.png" alt="Spanish WebSite" />
+            <button class="project-button">Show Project</button>
+          </div>
+          <div class="project-hover-bg"></div>
+        </div>
+        <div class="project">
+          <div>
+            <h3>Spanish Shine</h3>
+            <p>React.js, Tailwind.css</p>
+          </div>
+          <div class="project-image-container">
+            <img src="./assets/spanish-shine.png" alt="Spanish WebSite" />
+            <button class="project-button">Show Project</button>
+          </div>
+          <div class="project-hover-bg"></div>
+        </div>
+        <div class="project">
+          <div>
+            <h3>Spanish Shine</h3>
+            <p>React.js, Tailwind.css</p>
+          </div>
+          <div class="project-image-container">
+            <img src="./assets/spanish-shine.png" alt="Spanish WebSite" />
+            <button class="project-button">Show Project</button>
+          </div>
+          <div class="project-hover-bg"></div>
+        </div>
+        <div class="project">
+          <div>
+            <h3>Spanish Shine</h3>
+            <p>React.js, Tailwind.css</p>
+          </div>
+          <div class="project-image-container">
+            <img src="./assets/spanish-shine.png" alt="Spanish WebSite" />
+            <button class="project-button">Show Project</button>
+          </div>
+          <div class="project-hover-bg"></div>
+        </div>
+        
       </div>
     </section>
   </body>
