--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="hero.css" />
     <link rel="stylesheet" href="skills.css" />
     <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="contact.css">
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -71,6 +72,7 @@
         </div>
       </div>
     </section>
+
     <section class="skills" id="about">
       <div class="container skills-container">
         <div class="skill-heading">
@@ -191,8 +193,91 @@
           </div>
           <div class="project-hover-bg"></div>
         </div>
-        
       </div>
     </section>
+
+    <section class="contact" id="contact">
+      <div class="container contact-container">
+        <div class="contact-info">
+          <h2>Contact me</h2>
+          <p>
+            I am open to discussing your next project, improving your code, or
+            helping with usser experiece
+          </p>
+          <h3>Email me at</h3>
+          <p aria-label="Email Address">cm33673@gmail.com</p>
+          <div class="contact-socials">
+            <h4>Socials</h4>
+            <div class="contact-social-links">
+              <a href="#" aria-label="Facebook">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+              <a href="#" aria-label="LinkedIn">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+              <a href="#" aria-label="Twitter">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+              <a href="#" aria-label="Instagram">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="contact-form">
+          <form>
+            <div>
+              <label for="name">Your name:</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Your name"
+                required
+              />
+              <label for="email">Your email:</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                autocomplete="email"
+                placeholder="Your email"
+                required
+              />
+              <label for="subject">Subject:</label>
+              <input
+                type="text"
+                name="subject"
+                id="subject"
+                autocomplete="off"
+                placeholder="subject"
+                required
+              />
+              <label for="message">Write your message:</label>
+              <textarea
+                name="message"
+                id="message"
+                rows="5"
+                placeholder="Write your message"
+                required
+              ></textarea>
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container footer-container">
+        <p>&copy; 2023 Carlos Mendoza all rights reserved</p>
+      </div>
+    </footer>
+    
+    <div class="btt-button">
+      <a href="/" aria-label="Bact to top">
+        <ion-icon name="arrow-up-outline" ></ion-icon>
+      </a>
+    </div>
   </body>
 </html>
