--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="hero.css" />
     <link rel="stylesheet" href="skills.css" />
     <link rel="stylesheet" href="projects.css" />
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="contact.css" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -16,6 +16,8 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <script src="script.js" defer></script>
 
     <title>My Portfolio</title>
@@ -23,7 +25,7 @@
   <body>
     <header>
       <nav>
-        <div class="container navbar">
+        <div class="container navbar animate">
           <a href="/" aria-label="Home">
             <h1>Carlos <span>Mendoza.</span></h1>
           </a>
@@ -36,7 +38,7 @@
               <a href="#projects" aria-label="Projects">Projects</a>
             </li>
             <li>
-              <a href="#contacts" aria-label="Contacts">Contacts</a>
+              <a href="#contact" aria-label="Contacts">Contacts</a>
             </li>
             <a href="/resume.pdf" download aria-label="Download Resume"
               ><button class="navbar-button">Download Resume</button></a
@@ -52,8 +54,8 @@
     </header>
 
     <section class="hero">
-      <div class="container hero-container">
-        <div class="hero-info">
+      <div class="container hero-container ">
+        <div class="hero-info animate">
           <hgroup>
             <h4>Hello, I am Carlos A.</h4>
             <h1>I am a Front-End Developer</h1>
@@ -63,11 +65,15 @@
             programmer.
           </p>
           <div class="hero-btn-container">
-            <button aria-label="View Projects">Projects</button>
-            <button aria-label="Hire me">Hire me</button>
+            <a href="#projects" class="hero-button" aria-label="View Projects"
+              >Projects</a
+            >
+            <a href="#contact" class="hero-button" aria-label="Hire me"
+              >Hire me</a
+            >
           </div>
         </div>
-        <div class="hero-image-container">
+        <div class="hero-image-container animateImage">
           <img src="./assets/foto2.png" alt="Carlos" />
         </div>
       </div>
@@ -209,16 +215,32 @@
           <div class="contact-socials">
             <h4>Socials</h4>
             <div class="contact-social-links">
-              <a href="#" aria-label="Facebook">
+              <a
+                href="https://www.facebook.com/profile.php?id=100003361604436"
+                aria-label="Facebook"
+                target="_blank"
+              >
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
-              <a href="#" aria-label="LinkedIn">
+              <a
+                href="https://www.linkedin.com/in/carlos-mendoza-060097225/"
+                aria-label="LinkedIn"
+                target="_blank"
+              >
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
-              <a href="#" aria-label="Twitter">
+              <a
+                href="https://www.linkedin.com/in/carlos-mendoza-060097225/"
+                aria-label="Twitter"
+                target="_blank"
+              >
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
-              <a href="#" aria-label="Instagram">
+              <a
+                href="https://www.linkedin.com/in/carlos-mendoza-060097225/"
+                aria-label="Instagram"
+                target="_blank"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </div>
@@ -273,10 +295,10 @@
         <p>&copy; 2023 Carlos Mendoza all rights reserved</p>
       </div>
     </footer>
-    
+
     <div class="btt-button">
       <a href="/" aria-label="Bact to top">
-        <ion-icon name="arrow-up-outline" ></ion-icon>
+        <ion-icon name="arrow-up-outline"></ion-icon>
       </a>
     </div>
   </body>
