--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <nav>
-        <div class="container navbar animate">
+        <div class="container navbar">
           <a href="/" aria-label="Home">
             <h1>Carlos <span>Mendoza.</span></h1>
           </a>
