--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     <section class="hero">
-      <div class="container hero-container ">
+      <div class="container hero-container">
         <div class="hero-info animate">
           <hgroup>
             <h4>Hello, I am Carlos A.</h4>
@@ -207,8 +207,8 @@
         <div class="contact-info">
           <h2>Contact me</h2>
           <p>
-            I am open to discussing your next project, improving your code, or
-            helping with usser experiece
+            Hi there! Feel free to reach out to me at your convenience. Looking
+            forward to connecting soon.
           </p>
           <h3>Email me at</h3>
           <p aria-label="Email Address">cm33673@gmail.com</p>
