--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
     </section>
 
     <section class="projects" id="projects">
+      <div class="container">
+        <h2 class="works">Some of my works</h2>
+      </div>
       <div class="container projects-container">
         <div class="project">
           <div>
@@ -218,7 +221,8 @@
           </div>
         </div>
         <div class="contact-form">
-          <form>
+          <form action="https://formsubmit.co/cm33673@gmail.com" method="POST">
+
             <div>
               <label for="name">Your name:</label>
               <input
@@ -272,5 +276,9 @@
         <ion-icon name="arrow-up-outline"></ion-icon>
       </a>
     </div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
   </body>
 </html>
+
+
