--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
         </div>
         <div class="contact-form">
           <form action="https://formsubmit.co/cm33673@gmail.com" method="POST">
-
+            <!-- hoeypot -->
+            <input type="text" name="_honey" style="display: none;">
+            <input type="hidden" name="_captcha" value="false">
             <div>
               <label for="name">Your name:</label>
               <input
