--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             <!-- hoeypot -->
             <input type="text" name="_honey" style="display: none;">
             <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="https://kuriarare.github.io/porfolio/success.html">
             <div>
               <label for="name">Your name:</label>
               <input
