Redirect to main page

--- a/success.html
+++ b/success.html
@@ -14,10 +14,11 @@
       </p>
     </div>
     <style>
-        body{
-            display: flex;
-            justify-content: center;
-        }
+      body {
+        display: flex;
+        justify-content: center;
+      }
+
       h1 {
         font-size: 3rem;
         line-height: 2.25rem;
@@ -34,5 +35,11 @@
         line-height: 1;
       }
     </style>
+    <script>
+      
+      setTimeout(function () {
+        window.location.href = "index.html";
+      }, 5000); 
+    </script>
   </body>
 </html>
