--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <nav>
         <div class="container navbar">
-          <a href="/" aria-label="Home">
+          <a href="/porfolio" aria-label="Home">
             <h1>Carlos <span>Mendoza.</span></h1>
           </a>
 
@@ -275,7 +275,7 @@
     </footer>
 
     <div class="btt-button">
-      <a href="/" aria-label="Bact to top">
+      <a href="/portfolio" aria-label="Bact to top">
         <ion-icon name="arrow-up-outline"></ion-icon>
       </a>
     </div>
