--- a/index.html
+++ b/index.html
@@ -275,10 +275,11 @@
     </footer>
 
     <div class="btt-button">
-      <a href="#hero" aria-label="Bact to top">
+      <a href="#hero" aria-label="Back to top">
         <ion-icon name="arrow-up-outline"></ion-icon>
       </a>
     </div>
+    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     
   </body>
