--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <p>React.js, Tailwind.css, i18n.js and Express with nodemailer</p>
           </div>
           <div class="project-image-container">
-            <img src="./assets/lingo-net.png" alt="Lingolandias Website" />
+            <img src="./assets/lingo-net.PNG" alt="Lingolandias Website" />
             <button
               class="project-button"
               data-project="Lingolandias Website"
@@ -243,7 +243,7 @@
             <button
               class="project-button"
               data-project="Lingolandias Academy"
-              data-description="Lingolandias Academy is a learning platform for students of our online school developed using React.js and Tailwind.css for the frontend, Nest.js for the backend, PostgreSQL for the database, and Socket.io for real-time communication with chat integrations for a global chat where everyone can communicate and peer to peer chat with the teachers. It has a dockerized instance of jitsi-meet to have the online classes with each student or the meeting rooms with teachers from each language we teach: Spanish, English, Polish. For storage, I used AWS S3 to store the files and images and future videos of each languge courses. At the moment, I am using JWT for authentication and authorization. I have develped this project alone and is currently in production. All our students love it, though there is still a lot of work to do."
+              data-description="Lingolandias Academy is a learning platform for students of our online school developed using React.js and Tailwind.css for the frontend, Nest.js for the backend, PostgreSQL for the database, and Socket.io for real-time communication with chat integrations for a global chat where everyone can communicate and peer to peer chat with the teachers. It has a dockerized instance of jitsi-meet to have the online classes with each student or the meeting rooms with teachers from each language we teach: Spanish, English, Polish. For storage, I used AWS S3 to store the files and images and future videos of each languge courses. At the moment, I am using JWT for authentication and authorization. The project (frontend and backend) is deployed on a Hostinger VPS using Nginx and Let's Encrypt certificates. I have develped this project alone and is currently in production. All our students love it, though there is still a lot of work to do."
               data-link="https://lingolandias.com"
             >
               Show Project
